# demo-geodesic-heat

./: CMakeLists.txt  LICENSE.txt  README.md  test_server.py
assets/models/: armadillo-remesh.ply  chen-gackstatter-surface.ply  double-torus.ply  node-cluster.ply  torus.ply  triple-torus.ply
assets/shaders/: contour_color.frag.glsl  contour_color.vert.glsl  contour_line.frag.glsl  contour_line.vert.glsl
cmake/: app-utils.cmake
src/: assets.cpp  assets.hpp  graphics.c  graphics.cpp  graphics.h  graphics.hpp  heat_method.hpp  main.cpp  scene.cpp  tasks.cpp  tasks.hpp
web/: index.html
